--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Django==5.1.4
 dnspython==2.7.0
 email_validator==2.2.0
 grpclib==0.4.7
+gunicorn==23.0.0
 h2==4.2.0
 hpack==4.1.0
 hyperframe==6.1.0
