--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 asgiref==3.8.1
 betterproto==2.0.0b6
+Brotli==1.1.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
@@ -51,3 +52,4 @@ tuf==5.1.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.3.0
+whitenoise==6.9.0
