--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ packaging==24.2
 pillow==11.0.0
 platformdirs==4.3.6
 protobuf==5.29.3
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.10.6
@@ -58,3 +59,4 @@ typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.3.0
 whitenoise==6.9.0
+psycopg2-binary>=2.9.9
