--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ Pygments==2.19.1
 PyJWT==2.10.1
 pyOpenSSL==25.0.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 pytz==2024.2
 requests==2.32.3
 rfc3161-client==0.1.2
