--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ cryptography==44.0.0
 dj-database-url==2.3.0
 Django==5.1.4
 django-storages==1.14.6
+django-widget-tweaks==1.5.0
 dnspython==2.7.0
 email_validator==2.2.0
 grpclib==0.4.7
